getLAstScore, displayRollSummary and playerInputChoice